# Tinympc-for-Vehicle-Lateral-Control

./: LICENSE  MPC_Final.m  MPC_Final_osqp.m  MPC_Final_tiny.m  MPC_control.slx  MPC_control.slxc  README.md  setup_osqp.m  setup_tinympc.m  simfile.sim
osqp-matlab/: osqp_mex.cpp
tinympc/tinympc-matlab/examples/: interactive_cartpole.mlx
tinympc/tinympc-matlab/tinympc/TinyMPC/: CMakeLists.txt
tinympc/tinympc-matlab/tinympc/TinyMPC/src/tinympc/: codegen.cpp
